# PeluPrice-MVP

./: .env  .gitignore  PRODUCTION_DEPLOYMENT.md  README.md  dev-simple.bat  dev.bat  dev.ps1  dev.sh  docker-compose.prod.yml  docker-compose.yml  fix-production.sh  setup-windows.ps1  start-windows.bat  vercel.json
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  check_db.py  main.py  peluprice.db  pyproject.toml  start.sh
backend/app/: database.py  main.py
backend/app/api/: auth.py  devices.py  users.py
backend/app/auth/: auth.py
backend/app/models/: __init__.py  device.py  user.py
backend/app/schemas/: __init__.py  auth.py  device.py  user.py
backend/app/services/: device_service.py  get_db.py  mqtt_service.py  user_service.py
backend/app/ws/: websocket.py
firmware/: .gitignore
firmware/arduino/: platformio.ini
firmware/esp32/: platformio.ini
frontend/: Dockerfile  README.md  i18n.js  i18n.ts  i18n.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: ActivationForm.js  AddCoinForm.js  CoinSelector.js  ConfirmModal.js  DeviceCard.js  DeviceForm.js  DeviceManagementGrid.js  FileUploader.js  LanguageSelector.js  Navbar.js  PortfolioCard.js  PortfolioSummary.js  ProtectedRoute.js  ThresholdInputs.js  VoiceTester.js
frontend/context/: AuthContext.js
frontend/hooks/: useAuthPersistence.js
frontend/lib/: api.ts  config.ts  okx-service.ts  types.ts
frontend/messages/: de.json  en.json  (+3 more)
scripts/: 01_init_postgres.sh  docker_init_db.py  init_db.py  start-production.sh  test_db_connection.py
(+22 files in other folders)
